--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google-cloud/speech": "^6.6.1",
+    "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "formidable": "^3.5.1",
     "multiparty": "^4.2.3",
